--- a/capaNegocio/capaNegocio.csproj
+++ b/capaNegocio/capaNegocio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="logicaNegocioFactura.cs" />
     <Compile Include="logicaNegocioProductos.cs" />
     <Compile Include="logicaNegocioProveedores.cs" />
+    <Compile Include="logicaNegocioRespaldo.cs" />
     <Compile Include="logicaNegocioVentas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="logicaNegocioClientes.cs" />
