--- a/capaPresentacionWF/capaPresentacionWF.csproj
+++ b/capaPresentacionWF/capaPresentacionWF.csproj
@@ -86,6 +86,12 @@
     <Compile Include="FVentas.Designer.cs">
       <DependentUpon>FVentas.cs</DependentUpon>
     </Compile>
+    <Compile Include="MDIInventario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MDIInventario.Designer.cs">
+      <DependentUpon>MDIInventario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Fcategoria.resx">
@@ -108,6 +114,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FVentas.resx">
       <DependentUpon>FVentas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MDIInventario.resx">
+      <DependentUpon>MDIInventario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
